--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -21,31 +21,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Вывод информации о пользователе
+      
       - name: Print user information
         run: |
           echo "Full Name: ${{ env.FULL_NAME }}"
           echo "Group: ${{ env.GROUP }}"
           echo "GitHub Username: ${{ github.actor }}"
 
-      # Установка Python
+      
       - name: Set up Python 3.13
         uses: actions/setup-python@v4
         with:
           python-version: 3.13
 
-      # Установка зависимостей
-      - name: Install dependencies
+      
+      - name: Install pip and flake8
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install flake8
 
-      # Запуск тестов
+      
       - name: Run tests
         run: python -m unittest discover -s test
 
-      # Проверка стиля кода
+      
       - name: Lint code with flake8
-        run: |
-          pip install flake8
-          flake8 .
+        run: flake8 .
