--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -21,29 +21,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      
       - name: Print user information
         run: |
           echo "Full Name: ${{ env.FULL_NAME }}"
           echo "Group: ${{ env.GROUP }}"
           echo "GitHub Username: ${{ github.actor }}"
 
-      
       - name: Set up Python 3.13
         uses: actions/setup-python@v4
         with:
           python-version: 3.13
 
-      
       - name: Install pip and flake8
         run: |
           python -m pip install --upgrade pip
           pip install flake8
 
-      
       - name: Run tests
+        working-directory: geometric_lib
         run: python -m unittest discover -s test
 
-      
       - name: Lint code with flake8
         run: flake8 .
