--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -38,7 +38,9 @@ jobs:
           pip install flake8
 
       - name: Run tests
-        run: python -m unittest discover -s ./test
+        run: |
+          cd geometric_lib
+          python -m unittest discover -s test
 
       - name: Lint code with flake8
         run: flake8 .
