--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Run tests
         run: |
-          python -m unittest discover -s test -t .
+          PYTHONPATH=. python -m unittest discover -s test -p "test_*.py"
 
       - name: Lint code with flake8
         run: flake8 .
