--- a/.github/workflows/ci_workflow_pls_work.yml
+++ b/.github/workflows/ci_workflow_pls_work.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Run tests
         run: |
-          python -m unittest discover -s ./test
+          python -m unittest discover -s test
 
       - name: Lint code with flake8
         run: flake8 .
