--- a/.github/workflows/ci_workflow_pls_work.yml
+++ b/.github/workflows/ci_workflow_pls_work.yml
@@ -39,6 +39,7 @@ jobs:
 
       - name: Run tests
         run: |
+          cd request_handler
           python -m unittest discover -s test
 
       - name: Lint code with flake8
