--- a/.github/workflows/ci_workflow_pls_work.yml
+++ b/.github/workflows/ci_workflow_pls_work.yml
@@ -39,8 +39,7 @@ jobs:
 
       - name: Run tests
         run: |
-          cd request_handler
-          python -m unittest discover -s test
+          python -m unittest discover -s ./test -p 'test_*.py'
 
       - name: Lint code with flake8
         run: flake8 .
