--- a/.github/workflows/ci_workflow_pls_work.yml
+++ b/.github/workflows/ci_workflow_pls_work.yml
@@ -38,7 +38,9 @@ jobs:
           pip install flake8
 
       - name: List Files
-        run: python -m unittest discover -s test
+        run: |
+          cd $GITHUB_WORKSPACE
+          python -m unittest discover -s test
           
 
       - name: Lint code with flake8
