--- a/.github/workflows/ci_workflow_pls_work.yml
+++ b/.github/workflows/ci_workflow_pls_work.yml
@@ -39,8 +39,8 @@ jobs:
 
       - name: List Files
         run: |
-          cd $GITHUB_WORKSPACE
-          python -m unittest discover -s test
+          cd programs
+          python -m unittest discover -s ./test
           
 
       - name: Lint code with flake8
