--- a/.github/workflows/ci_workflow_pls_work.yml
+++ b/.github/workflows/ci_workflow_pls_work.yml
@@ -21,6 +21,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Code
+          uses: actions/checkout@v4
+          
       - name: Print user information
         run: |
           echo "Full Name: ${{ env.FULL_NAME }}"
